intel/bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main/log.txt
bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main.c:56:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpFx;
                ^
                      = nullptr
bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main.c:57:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpObjS;
                ^
                        = nullptr
bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main.c:58:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpQ1;
                ^
                      = nullptr
bench_214/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main/extr_.openpilotselfdrivecontrolsliblateral_mpclib_mpc_exportacado_solver.c_acado_setObjQ1Q2_with_main.c:59:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpQ2;
                ^
                      = nullptr
4 errors generated.
HLS FPGA Parse FAILED.
